# qml

./: .gitignore  .pylintrc  =3.0.8  CONTRIBUTING.md  Makefile  PennylaneTutorial.ipynb  README-v2.md  README.md  Untitled.ipynb  __deprecated_requirements-norun.txt  __deprecated_requirements.txt  __deprecated_requirements_no_deps.txt  all_mathematical_expressions.txt  beginner.rst  comment.js  comment.py  concepts.rst  conf.py  constraints.txt  covalent_cloud_gpu.ipynb  custom_directives.py  datasets.rst  datasets_intro.rst  datasets_module.rst  datasets_qchem.rst  datasets_qspin.rst  demo_diffs.md  demonstrations.rst  demonstrations_categories.json  demonstrations_categories.md  demonstrations_categories.metadata.json  demonstrations_metadata.md  demonstrations_metadata_guide.md  demonstrations_statistics.py  demos_basics.rst  demos_community.rst  demos_community.rst.template  demos_community.rst_t  demos_community.yaml  demos_getting-started.rst  (+46 more)
.circleci/: comment.py  config.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.ipynb_checkpoints/: custom_directives-checkpoint.py  requirements-checkpoint.txt
_static/: author_bio.css  xanadu_gallery.css
_templates/: filters.html  page.html  search.html
app/: index.rst  quantum_neural_net.ipynb  quantum_neural_net.py  quantum_neural_net.rst  sg_execution_times.rst  tutorial_QGAN.ipynb  tutorial_QGAN.rst  tutorial_barren_plateaus.ipynb  tutorial_barren_plateaus.py  tutorial_barren_plateaus.py.md5  tutorial_barren_plateaus.rst  tutorial_coherent_vqls.ipynb  tutorial_coherent_vqls.rst  tutorial_data_reuploading_classifier.ipynb  tutorial_data_reuploading_classifier.py.md5  tutorial_data_reuploading_classifier.rst  tutorial_doubly_stochastic.ipynb  tutorial_doubly_stochastic.py.md5  tutorial_doubly_stochastic.rst  tutorial_embeddings_metric_learning.ipynb  tutorial_embeddings_metric_learning.py  tutorial_embeddings_metric_learning.py.md5  tutorial_embeddings_metric_learning.rst  tutorial_ensemble_multi_qpu.ipynb  tutorial_ensemble_multi_qpu.py.md5  tutorial_ensemble_multi_qpu.rst  tutorial_isingmodel_PyTorch.ipynb  tutorial_isingmodel_PyTorch.rst  tutorial_qaoa_maxcut.ipynb  tutorial_qaoa_maxcut.py  tutorial_qaoa_maxcut.py.md5  tutorial_qaoa_maxcut.rst  tutorial_quantum_natural_gradient.ipynb  tutorial_quantum_natural_gradient.py  tutorial_quantum_natural_gradient.py.md5  tutorial_quantum_natural_gradient.rst  tutorial_quantum_transfer_learning.ipynb  tutorial_quantum_transfer_learning.py.md5  tutorial_quantum_transfer_learning.rst  tutorial_rotoselect.ipynb  (+19 more)
barren_gadgets/: barren_gadgets.py
beginner/: Torch.ipynb  Untitled.ipynb  h2o.SDF  pytorch_noise.py  random-data.ipynb  tutorial_advanced_usage.py  tutorial_gaussian_transformation.py  tutorial_plugins_hybrid.py  tutorial_quantum_chemistry.py  tutorial_qubit_rotation.py
build_requirements/dev/: pyproject.toml
build_requirements/master/: pyproject.toml
concepts/: autograd_quantum.rst  concept_embeddings.rst  hybrid_computation.rst  quantum_nodes.rst  varcirc.rst
demo_checker/: demo_diffs.md  image_compare.md
demonstrations/: .tutorial_classical_kernels.py.swp  HHL_with_catalyst_qrisp.metadata.json  HHL_with_catalyst_qrisp.py  How_to_optimize_QML_model_using_JAX_and_JAXopt.metadata.json  How_to_optimize_QML_model_using_JAX_and_JAXopt.py  How_to_optimize_QML_model_using_JAX_and_Optax.metadata.json  How_to_optimize_QML_model_using_JAX_and_Optax.py  JOANA_tutorial_classically-boosted_vqe-Copy1.ipynb  JOANA_tutorial_classically-boosted_vqe.ipynb  Quantum_Kernel_Geometric_Difference_Post_Feedback.ipynb  RY_params.npy:Zone.Identifier  SO2_Emission_Prediction_from_Diesel_Engines_with_Quantum_Technology_(5G).py  TEMP.py  X_antbees-new.txt  X_antbees_test-new.txt  Y_antbees-new.txt  Y_antbees_test-new.txt  adjoint_diff_benchmarking.metadata.json  adjoint_diff_benchmarking.py  adjoint_timing.py  ahs_aquila.metadata.json  ahs_aquila.py  annni.ipynb  barren_plateaus.py  braket-parallel-gradients.metadata.json  braket-parallel-gradients.py  circuits_as_fourier_series.metadata.json  circuits_as_fourier_series.py  covalent_cloud_gpu.metadata.json  covalent_cloud_gpu.py  demo.metadata.schema.0.1.0.json  demonstrations_categories.metadata.json  demonstrations_statistics.py  efficient_simulation_of_clifford_circuits.py  ensemble_multi_qpu.metadata.json  ensemble_multi_qpu.py  error_mitigation.metadata.json  error_mitigation.py  falqon.ipynb  falqon_david.ipynb  (+576 more)
demos/: index.rst  pytorch_noise.ipynb  pytorch_noise.rst  quantum_neural_net.ipynb  quantum_neural_net.rst  rutorial_barren_plateaus.rst  sg_execution_times.rst  tutorial_QGAN.ipynb  tutorial_QGAN.py.md5  tutorial_QGAN.rst  tutorial_advanced_usage.ipynb  tutorial_advanced_usage.py.md5  tutorial_advanced_usage.rst  tutorial_barren_plateaus.ipynb  tutorial_barren_plateaus.py.md5  tutorial_barren_plateaus.rst  tutorial_coherent_vqls.ipynb  tutorial_coherent_vqls.py  tutorial_coherent_vqls.py.md5  tutorial_coherent_vqls.rst  tutorial_data_reuploading_classifier.ipynb  tutorial_data_reuploading_classifier.py  tutorial_data_reuploading_classifier.py.md5  tutorial_data_reuploading_classifier.rst  tutorial_doubly_stochastic.ipynb  tutorial_doubly_stochastic.py  tutorial_doubly_stochastic.rst  tutorial_embedding_metric_learning.py.md5  tutorial_embedding_metric_learning.rst  tutorial_embeddings_metric_learning.ipynb  tutorial_embeddings_metric_learning.py  tutorial_embeddings_metric_learning.py.md5  tutorial_embeddings_metric_learning.rst  tutorial_gaussian_transformation.ipynb  tutorial_gaussian_transformation.py  tutorial_gaussian_transformation.py.md5  tutorial_gaussian_transformation.rst  tutorial_isingmodel_PyTorch.ipynb  tutorial_isingmodel_PyTorch.py.md5  tutorial_isingmodel_PyTorch.rst  (+33 more)
dependencies/: README.md  constraints-dev.txt  constraints-plc-dev.json  constraints-plc-dev.txt  constraints-stable.txt  requirements-build.txt  requirements-core.in
documentation/: contributing-2.md  contributing.md  demo-cli.md  qml-cli.md
glossary/: autograd_quantum.rst  barren_plateaus.rst  (+40 more)
(+1025 files in other folders)
