[tool.poetry]
name = "qml"
version = "0.0.0"
description = "Introductions to key concepts in quantum machine learning, as well as tutorials and implementations from cutting-edge QML research."
authors = ["PennyLaneAI <info@pennylane.ai>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://pennylane.ai/qml/"
repository = "https://github.com/PennyLaneAI/qml"
keywords = ["demo", "qml", "tensorflow", "automatic-differentiation", "tutorials", "pytorch", "autograd", "quantum-computing", "neural-networks", "quantum-chemistry", "key-concepts", "quantum-machine-learning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.10.0"

# Base dependencies needed to build the website without any code execution (*-norun)
[tool.poetry.group.base.dependencies]
sphinx = ">=5.0.2"
sphinx_gallery = "0.17.1"
Jinja2 = "3.0.3"
markupsafe = "2.1.1"
numpy = "~1.24"
pyyaml = "^6.0.1"
pennylane-sphinx-theme = { git = "https://github.com/PennyLaneAI/pennylane-sphinx-theme.git", branch = "sphinx-update" }
pypandoc = "1.5"

[tool.poetry.group.executable-dependencies.dependencies]
###########################################################
###################### IMPORTANT NOTE #####################
# These pinned versions of PL are NOT used for Dev builds #
#      The latest commit from GitHub is used instead      #
###########################################################
pennylane = "0.38.0"
pennylane-cirq = "0.36.0"
pennylane-qiskit = "0.38.1"
pennylane-qulacs = "0.36.0"
pennylane-catalyst = "0.8.1"
##########################################################


matplotlib = "3.7.2"
jax = "0.4.28"
jaxlib = "0.4.28"
jaxopt = "0.8.3"
seaborn = "0.13.2"
kahypar = "1.1.7"
openfermionpyscf = "0.5"
covalent = "0.227.0rc0"
openqaoa-core = "0.2.5"
dwave-ocean-sdk = "7.0.0"
pyzx = "0.7.0"
neural-tangents = "0.6.2"
plotly = ">=4.5.0"
pydantic = "^2.8.2"
ply = "3.11"
optax = "0.2.3"
flax = "0.9.0"
qutip = "4.7.3"
mitiq = "0.32.0"
zstd = "*"
dill = "*"
stim = "*"
bluequbit = "0.8.1b1"
quimb = "1.8.2"
aiohttp = "3.9.5"
fsspec = "2024.6.1"
h5py = "3.11.0"
qiskit = ">=1.0.0"
qiskit-aer = ">=0.14.0"
sphinxcontrib-applehelp = "1.0.8"
sphinx-gallery = "0.17.1"


# Install a difference version of torch from PyPI as the one from PyTorch repo is not compatible with MacOS
torch = [
    { version = "2.1.2", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" },
    { version = "2.1.2+cpu", source = "pytorch-cpu", markers = "platform_machine == 'x86_64'" }
]
torchvision = [
    { version = "0.16.2", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" },
    { version = "0.16.2+cpu", source = "pytorch-cpu", markers = "platform_machine == 'x86_64'" }
]

# The following packages are platform locked to not install on MacOS as the installation breaks
scikit-learn = { version = "1.3.0", markers = "platform_machine == 'x86_64'" }
tensorflow = { version = "2.14.1", markers = "platform_machine == 'x86_64'" }
flamingpy = { version = ">=0.10.1b1", markers = "platform_machine == 'x86_64'" }
qulacs = { version = "0.6.1", markers = "platform_machine == 'x86_64'" }

# The following packages are only installed on MacOS for compatibility
tensorflow-macos = { version = "2.14.1", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }

[tool.poetry.group.metadata-validation]
optional = true

[tool.poetry.group.metadata-validation.dependencies]
jsonschema = { extras = ["format"], version = "~4.17.3" }
check-jsonschema = "^0.23.3"

