# ---------------------------
# Project Metadata
# ---------------------------
[project]
name = "qml"
version = "0.1.0"
description = "Introductions to key concepts in quantum computing, as well as tutorials and implementations from cutting-edge quantum computing research."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11.0,<3.15.0"
authors = [
  { name = "PennyLaneAI", email = "info@pennylane.ai" }
]
keywords = [
  "demo", "qml", "tensorflow", "automatic-differentiation", "tutorials", "pytorch", "autograd",
  "quantum-computing", "neural-networks", "quantum-chemistry", "key-concepts", "quantum-machine-learning"
]
dependencies = [
  "typer>=0.15.1,<0.16.0",
  "poetry-plugin-export>=1.8.0,<2.0.0",
  "dulwich<0.22",
  "requirements-parser>=0.11.0,<0.12.0",
  "lxml>=5.3.0,<6.0.0",
  "uv>=0.7.18,<0.8.0",
  "sphobjinv>=2.3.1.3,<3.0.0",
  "pandocfilters>=1.4.0"
]

# ---------------------------
# Project URLs
# ---------------------------
[project.urls]
Homepage = "https://pennylane.ai/qml/"
Repository = "https://github.com/PennyLaneAI/qml"

# ---------------------------
# Project Scripts
# ---------------------------
[project.scripts]
qml = "qml.app:app"

# ---------------------------
# Poetry Configuration
# ---------------------------
[tool.poetry]
requires-poetry = ">=2.1"
packages = [
  {include = "qml", from = "lib"}
]

# ---------------------------
# Build System
# ---------------------------
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------
# Dependency Groups
# ---------------------------

# Base dependencies needed to build the website without any code execution (*-norun)
# When updating these, ensure that the accompanying /dependencies/requirements-build.txt is also updated.
[tool.poetry.group.base.dependencies]
sphinx = "8.1"
sphinx_gallery = "0.17.1"
Jinja2 = "3.1.6"
markupsafe = "2.1.1"
pyyaml = "^6.0.1"
pennylane-sphinx-theme = "0.25.0"
pypandoc = "1.5"
pennylane = "0.44.0"
uv = "^0.7.18"

# Metadata validation dependencies (optional)
[tool.poetry.group.metadata-validation]
optional = true

[tool.poetry.group.metadata-validation.dependencies]
jsonschema = { extras = ["format"], version = "~4.17.3" }
check-jsonschema = "^0.23.3"

# Development dependencies
[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
