[tool.poetry]
name = "qml"
version = "0.0.0-dev"
description = "Introductions to key concepts in quantum machine learning, as well as tutorials and implementations from cutting-edge QML research."
authors = ["PennyLaneAI <info@pennylane.ai>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/PennyLaneAI/qml"
keywords = ["demo", "qml", "tensorflow", "automatic-differentiation", "tutorials", "pytorch", "autograd", "quantum-computing", "neural-networks", "quantum-chemistry", "key-concepts", "quantum-machine-learning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.9.0"

# Base dependencies needed to build the website without any cod execution (*-norun)
[tool.poetry.group.base.dependencies]
sphinx = "3.5.3"
sphinx-sitemap = "*"
sphinx_gallery = "0.10.0"
Jinja2 = "2.11.3"
markupsafe = "2.0.1"
numpy = "~1.21"
pyyaml = "5.4.1"
pennylane-sphinx-theme = "*"
pypandoc = "1.5"

[tool.poetry.group.executable-dependencies.dependencies]
# Un-Pinned latest PennyLane releases on dev
pennylane = { git = "https://github.com/PennyLaneAI/pennylane.git" }
pennylane-cirq = { git = "https://github.com/PennyLaneAI/pennylane-cirq.git" }
pennylane-qiskit = { git = "https://github.com/PennyLaneAI/pennylane-qiskit.git" }
pennylane-qulacs = { git = "https://github.com/PennyLaneAI/pennylane-qulacs.git" }

matplotlib = "3.5.3"
jax = "0.4.12"
jaxlib = "0.4.12"
jaxopt = "0.5.5"
seaborn = "0.10.1"
kahypar = "1.1.7"
torch = { version = "1.10.0+cpu", source = "pytorch-cpu" }
torchvision = { version = "0.11.1+cpu", source = "pytorch-cpu" }
scikit-learn = "0.23.2"
openfermionpyscf = "0.5"
tensorflow = "2.8.1"
covalent = "0.202.0.post1"
flamingpy = ">=0.10.1b1"
qulacs = "0.1.10.1"
pyzx = "0.7.0"
neural-tangents = "0.6.1"
plotly = ">=4.5.0"
optax = "0.1.3"
cirq-core = "0.14.1"
cirq-pasqal = "0.14.1"
zstd = "*"
dill = "*"
