[tool.poetry]
name = "qml"
version = "0.0.0"
description = "Introductions to key concepts in quantum machine learning, as well as tutorials and implementations from cutting-edge QML research."
authors = ["PennyLaneAI <info@pennylane.ai>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://pennylane.ai/qml/"
repository = "https://github.com/PennyLaneAI/qml"
keywords = ["demo", "qml", "tensorflow", "automatic-differentiation", "tutorials", "pytorch", "autograd", "quantum-computing", "neural-networks", "quantum-chemistry", "key-concepts", "quantum-machine-learning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.9.0"

# Base dependencies needed to build the website without any code execution (*-norun)
[tool.poetry.group.base.dependencies]
sphinx = "3.5.3"
sphinx-sitemap = "*"
sphinx_gallery = "0.10.0"
Jinja2 = "2.11.3"
markupsafe = "2.0.1"
numpy = "~1.21"
pyyaml = "5.4.1"
pennylane-sphinx-theme = "*"
pypandoc = "1.5"
pillow = "9.0.1"
charset-normalizer = "2.1.1"
docutils = "0.16"
pyparsing = "2.4.7"
urllib3 = "1.26.16"

[tool.poetry.group.executable-dependencies.dependencies]
# Pinned PennyLane releases on master
pennylane = "0.31.0"
pennylane-cirq = "0.31.0"
pennylane-qiskit = "0.31.0"
pennylane-qulacs = "0.29.0"

matplotlib = "3.5.3"
jax = "0.4.12"
jaxlib = "0.4.12"
jaxopt = "0.5.5"
seaborn = "0.10.1"
kahypar = "1.1.7"
torch = { version = "1.10.0+cpu", source = "pytorch-cpu" }
torchvision = { version = "0.11.1+cpu", source = "pytorch-cpu" }
scikit-learn = "0.23.2"
openfermionpyscf = "0.5"
tensorflow = "2.8.1"
covalent = "0.202.0.post1"
flamingpy = ">=0.10.1b1"
qulacs = "0.1.10.1"
pyzx = "0.7.0"
neural-tangents = "0.6.1"
plotly = ">=4.5.0"
optax = "0.1.3"
zstd = "*"
dill = "*"

# Temporarily pinned as pennylane-cirq has a bug when using cirq 1.x
cirq-core = "0.14.1"
cirq-pasqal = "0.14.1"
